# OrionUO

./: .clang-format  .gitignore  .travis.yml  BaseQueue.cpp  BaseQueue.h  BookEntryText.cpp  BookEntryText.h  CMakeLists.txt  CharacterList.cpp  CharacterList.h  CityList.cpp  CityList.h  ClientUO.cpp  ClientUO.h  ClientUO.manifest  ClientUO.rc  ClientUO.sln  ClientUO.vcxproj  ClientUO.vcxproj.filters  CommonFunctions.cpp  CommonFunctions.h  CommonInterfaces.cpp  CommonInterfaces.h  Constants.h  Container.cpp  Container.h  DefinitionMacro.h  EntryText.cpp  EntryText.h  EnumList.h  ExceptionFilter.cpp  ExceptionFilter.h  FrameBuffer.cpp  FrameBuffer.h  GLEngine.cpp  GLEngine.h  GameConsole.cpp  GameConsole.h  ImageBounds.cpp  ImageBounds.h  (+80 more)
OrionUO/: AutoResetEvent.cpp  AutoResetEvent.h  BaseQueue.cpp  BaseQueue.h  CMakeLists.txt  CharacterList.cpp  CharacterList.h  CityList.cpp  CityList.h  ClickObject.cpp  ClickObject.h  CommonInterfaces.cpp  CommonInterfaces.cpp-d386559c  CommonInterfaces.h  Constants.h  Container.cpp  Container.h  ContainerStack.cpp  ContainerStack.h  DateTimeStamp.cpp  DateTimeStamp.h  DefinitionMacro.h  EnumList.h  ExceptionFilter.cpp  ExceptionFilter.h  FileSystem.cpp  FileSystem.h  FreeImage.lib  GitRevision.h.in  Globals.cpp  Globals.h  ImageBounds.cpp  ImageBounds.h  IndexObject.cpp  IndexObject.h  Macro.cpp  Macro.h  MulStruct.h  Multi.cpp  Multi.h  (+71 more)
OrionUO/Crypt/: AES.h  CryptEntry.cpp  CryptEntry.h  GameCrypt.cpp  GameCrypt.h  LoginCrypt.cpp  LoginCrypt.h  MD5.cpp  MD5.h  Platform.h  Table.h  TwoFish.cpp  aes.h  md5.cpp  md5.h  platform.h  table.h  twofish.cpp
OrionUO/GLEngine/: GLEngine.cpp  GLEngine.h  GLFrameBuffer.cpp  GLFrameBuffer.h  GLHTMLTextTexture.cpp  GLHTMLTextTexture.h  GLShader.cpp  GLShader.h  GLTextTexture.cpp  GLTextTexture.h  GLTexture.cpp  GLTexture.h  GLTextureCircleOfTransparency.cpp  GLTextureCircleOfTransparency.h  GLVector.cpp  GLVector.h
OrionUO/GUI/: BaseGUI.cpp  BaseGUI.h  GUI.h  GUIActiveButton.cpp  GUIActiveButton.h  GUIAlphaBlending.cpp  GUIAlphaBlending.h  GUIBlending.cpp  GUIBlending.h  GUIBuff.cpp  GUIBuff.h  GUIBulletinBoardObject.cpp  GUIBulletinBoardObject.h  GUIButton.cpp  GUIButton.h  GUIButtonTileart.cpp  GUIButtonTileart.h  GUICheckbox.cpp  GUICheckbox.h  GUIChecktrans.cpp  GUIChecktrans.h  GUIColoredPolygone.cpp  GUIColoredPolygone.h  GUIComboBox.cpp  GUIComboBox.h  GUIComboboxText.cpp  GUIComboboxText.h  GUIDataBox.cpp  GUIDataBox.h  GUIDrawObject.cpp  GUIDrawObject.h  GUIExternalTexture.cpp  GUIExternalTexture.h  GUIGenericText.cpp  GUIGenericText.h  GUIGenericTextEntry.cpp  GUIGenericTextEntry.h  GUIGlobalColor.cpp  GUIGlobalColor.h  GUIGroup.cpp  (+67 more)
OrionUO/Game objects/: CustomHouseMultiObject.cpp  CustomHouseMultiObject.h  CustomHouseObjects.cpp  CustomHouseObjects.h  GameCharacter.cpp  GameCharacter.h  GameEffect.cpp  GameEffect.h  GameEffectDrag.cpp  GameEffectDrag.h  GameEffectMoving.cpp  GameEffectMoving.h  GameItem.cpp  GameItem.h  GameObject.cpp  GameObject.h  GamePlayer.cpp  GamePlayer.h  GameWorld.cpp  GameWorld.h  LandObject.cpp  LandObject.h  MapBlock.cpp  MapBlock.h  MapObject.cpp  MapObject.h  MultiObject.cpp  MultiObject.h  ObjectOnCursor.cpp  ObjectOnCursor.h  RenderStaticObject.cpp  RenderStaticObject.h  ShopItem.cpp  ShopItem.h  StaticObject.cpp  StaticObject.h
OrionUO/GameObjects/: CustomHouseMultiObject.cpp  CustomHouseMultiObject.h  CustomHouseObjects.cpp  CustomHouseObjects.h  GameCharacter.cpp  GameCharacter.h  GameEffect.cpp  GameEffect.h  GameEffectDrag.cpp  GameEffectDrag.h  GameEffectMoving.cpp  GameEffectMoving.h  GameItem.cpp  GameItem.h  GameObject.cpp  GameObject.h  GamePlayer.cpp  GamePlayer.h  GameWorld.cpp  GameWorld.h  LandObject.cpp  LandObject.h  MapBlock.cpp  MapBlock.h  MapObject.cpp  MapObject.h  MultiObject.cpp  MultiObject.h  ObjectOnCursor.cpp  ObjectOnCursor.h  RenderStaticObject.cpp  RenderStaticObject.h  StaticObject.cpp  StaticObject.h
OrionUO/Gumps/: Gump.cpp  Gump.h  GumpAbility.cpp  GumpAbility.h  GumpBaseScroll.cpp  GumpBaseScroll.h  GumpBook.cpp  GumpBook.h  GumpBuff.cpp  GumpBuff.h  GumpBulletinBoard.cpp  GumpBulletinBoard.h  GumpBulletinBoardItem.cpp  GumpBulletinBoardItem.h  GumpCombatBook.cpp  GumpCombatBook.h  GumpConsoleType.cpp  GumpConsoleType.h  GumpContainer.cpp  GumpContainer.h  GumpCustomHouse.cpp  GumpCustomHouse.h  GumpDrag.cpp  GumpDrag.h  GumpDye.cpp  GumpDye.h  GumpGeneric.cpp  GumpGeneric.h  GumpGrayMenu.cpp  GumpGrayMenu.h  GumpJournal.cpp  GumpJournal.h  GumpMap.cpp  GumpMap.h  GumpMenu.cpp  GumpMenu.h  GumpMenubar.cpp  GumpMenubar.h  GumpMinimap.cpp  GumpMinimap.h  (+64 more)
OrionUO/Managers/: AnimationManager.cpp  AnimationManager.h  CityManager.cpp  CityManager.h  ClilocManager.cpp  ClilocManager.h  ColorManager.cpp  ColorManager.h  ConfigManager.cpp  ConfigManager.h  ConnectionManager.cpp  ConnectionManager.h  CorpseManager.cpp  CorpseManager.h  CreateCharacterManager.cpp  CreateCharacterManager.h  CustomHousesManager.cpp  CustomHousesManager.h  EffectManager.cpp  EffectManager.h  FileManager.cpp  FileManager.h  FontsManager.cpp  FontsManager.h  GumpManager.cpp  GumpManager.h  IntlocManager.cpp  IntlocManager.h  MacroManager.cpp  MacroManager.h  MapManager.cpp  MapManager.h  MouseManager.cpp  MouseManager.h  MulReader.cpp  MulReader.h  ObjectPropertiesManager.cpp  ObjectPropertiesManager.h  OptionsMacroManager.cpp  OptionsMacroManager.h  (+18 more)
OrionUO/Network/: AES.H  Connection.cpp  Connection.h  GameCrypt.cpp  GameCrypt.h  LoginCrypt.cpp  LoginCrypt.h  Packets.cpp  Packets.h  PluginPackets.cpp  PluginPackets.h  UOHuffman.cpp  UOHuffman.h  md5.cpp  twofish.cpp
OrionUO/Screen stages/: BaseScreen.cpp  BaseScreen.h  CharacterListScreen.cpp  CharacterListScreen.h  ConnectionScreen.cpp  ConnectionScreen.h  CreateCharacterScreen.cpp  CreateCharacterScreen.h  DebugScreen.cpp  DebugScreen.h  GameBlockedScreen.cpp  GameBlockedScreen.h  GameScreen.cpp  GameScreen.h  MainScreen.cpp  MainScreen.h  SelectProfessionScreen.cpp  SelectProfessionScreen.h  SelectTownScreen.cpp  SelectTownScreen.h  ServerScreen.cpp  ServerScreen.h
OrionUO/Walker/: FastWalk.cpp  (+11 more)
(+361 files in other folders)
